Fixed spacing and added padding.

--- a/index.css
+++ b/index.css
@@ -86,14 +86,35 @@ h1 {
 
 }
 
+.box {
+  width: 90px;
+  height: 100px;
+  background-color: black;
+  text-align: center;
+  line-height: 100px;
+  border-bottom: 2px solid white;
+  /* This adds a 2px solid line beneath each div */
+  margin: 10px;
+  /* Add margin for spacing */
+}
+
 #site-title {
   position: absolute;
   opacity: 1.0;
-  top: -6%;
+  top: -4%;
   left: 2%;
-  transform: translate(0%, 60%);
   user-select: none;
   /* -- Prevent image highlighting -- */
+
+  width: 200px;
+  height: 100px;
+  background-color: black;
+  text-align: center;
+  line-height: 100px;
+  border-bottom: 2px solid white;
+  /* This adds a 2px solid line beneath each div */
+  margin: 10px;
+  /* Add margin for spacing */
 }
 
 #about {
@@ -101,7 +122,6 @@ h1 {
   opacity: 1.0;
   top: -4%;
   right: 26%;
-  transform: translate(0%, 60%);
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   user-select: none;
@@ -113,7 +133,6 @@ h1 {
   opacity: 1.0;
   top: -4%;
   right: 18%;
-  transform: translate(0%, 60%);
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   user-select: none;
@@ -125,7 +144,6 @@ h1 {
   opacity: 1.0;
   top: -4%;
   right: 10%;
-  transform: translate(0%, 60%);
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   user-select: none;
@@ -137,12 +155,12 @@ h1 {
   opacity: 1.0;
   top: -4%;
   right: 2%;
-  transform: translate(0%, 60%);
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   user-select: none;
   /* -- Prevent image highlighting -- */
 }
+
 
 #image-track {
   display: flex;
